Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35975

Server crashes after CREATE VIEW as SELECT ST_COLLECT...

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • None
    • N/A
    • GIS
    • None

    Description

      create view v1 as SELECT ST_COLLECT( ST_GEOMFROMTEXT('POINT(0 0)'));
      

      Version: '11.7.0-MariaDB-debug-log' 
      250129 16:39:38 [ERROR] mysqld got signal 11 ;
       
      Server version: 11.7.0-MariaDB-debug-log source revision: 98d48a3879023d8a59948d82b1dd2009d07159ad
       
      sql/signal_handler.cc:239(handle_fatal_signal)[0x5636f5e6afbd]
      sigaction.c:0(__restore_rt)[0x7fa66e14d420]
      sql/item_sum.cc:538(Item_sum::print(String*, enum_query_type))[0x5636f5fb2ea0]
      sql/item.cc:518(Item::print_item_w_name(String*, enum_query_type))[0x5636f5e92824]
      sql/sql_select.cc:31288(st_select_lex::print_item_list(THD*, String*, enum_query_type))[0x5636f5aef938]
      sql/sql_select.cc:31499(st_select_lex::print(THD*, String*, enum_query_type))[0x5636f5af05c2]
      sql/sql_lex.cc:3781(st_select_lex_unit::print(String*, enum_query_type))[0x5636f59ef0a8]
      sql/sql_view.cc:1013(mysql_register_view(THD*, st_ddl_log_state*, TABLE_LIST*, enum_view_create_mode, char*))[0x5636f5bb57a6]
      sql/sql_view.cc:665(mysql_create_view(THD*, TABLE_LIST*, enum_view_create_mode))[0x5636f5bb4787]
      sql/sql_parse.cc:5658(mysql_execute_command(THD*, bool))[0x5636f5a327dc]
      sql/sql_parse.cc:7876(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x5636f5a396b0]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x5636f5a2588f]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x5636f5a241d3]
      sql/sql_connect.cc:1448(do_handle_one_connection(CONNECT*, bool))[0x5636f5c3151b]
      sql/sql_connect.cc:1352(handle_one_connection)[0x5636f5c31284]
      perfschema/pfs.cc:2200(pfs_spawn_thread)[0x5636f61c506a]
      nptl/pthread_create.c:478(start_thread)[0x7fa66e141609]
       
      Query (0x7fa63c017d70): create view v1 as SELECT ST_COLLECT( ST_GEOMFROMTEXT('POINT(0 0)'))
      
      

      Attachments

        Issue Links

          Activity

            People

              Gosselin Dave Gosselin
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.