MDEV-35975 Server crashes after CREATE VIEW as SELECT ST_COLLECT...

Ensure that orig_args is populated during Item_func_collect::fix_fields_impl